# GMD-26

./: .gitignore  MolecularDynamics.py  README.md  main.py  pixi.toml  pixi_new  pyproject.toml  run.sh  smiles.txt
src/app/: functions.py  main.py
src/core/: calculator_factory.py  md_factory.py  molecule_factory.py  molecule_tools.py
src/gmd_26/app/: api.py  functions.py  main.py
src/gmd_26/core/: base.py  calculator_factory.py  md_factory.py  molecule_factory.py  molecule_tools.py
src/gmd_26/core/flashmd/: flashmd.py
src/gmd_26/core/orca/: orca.py
src/gmd_26/core/psi4/: psi4.py
src/gmd_26/core/xtb/: xtb.py
